// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel Snapshots does not render header when side panel is closed 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={false}
/>
`;

exports[`SidePanel Snapshots renders a closed side panel 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={false}
/>
`;

exports[`SidePanel Snapshots renders a side panel header 1`] = `
.emotion-2 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-2 .ezxdcmp1 {
  right: px;
  left: px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-2 emotion-3"
  open={true}
>
  <h2
    className="emotion-0 emotion-1"
  >
    Side Panel Header
  </h2>
</div>
`;

exports[`SidePanel Snapshots renders a side panel with children elements 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={true}
>
  <ul>
    <li>
      Home
    </li>
    <li>
      Favorites
    </li>
    <li>
      Recents
    </li>
    <li>
      Trash
    </li>
  </ul>
</div>
`;

exports[`SidePanel Snapshots renders a toggle button 1`] = `
.emotion-5 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 .emotion-4 {
  right: px;
  left: px;
}

.emotion-3 {
  position: absolute;
  bottom: 16px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 32px;
  height: 32px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #dfe2e6;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ced3d9;
}

.emotion-1:hover {
  background-color: #dfe2e6;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1 span svg {
  width: 20px;
  height: 20px;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-5 emotion-6"
  open={false}
>
  <div
    className="emotion-3 emotion-4"
  >
    <button
      className="emotion-1 emotion-2"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-arrow-right wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.525 5.263a.506.506 0 0 1 .003-.71l.7-.701a.495.495 0 0 1 .711-.003l7.778 7.777a.498.498 0 0 1 .144.352.48.48 0 0 1-.144.356l-7.778 7.778a.506.506 0 0 1-.71-.003l-.701-.7a.495.495 0 0 1-.003-.711l5.702-5.703H4.6a.505.505 0 0 1-.5-.505v-.99c0-.29.224-.505.5-.505h11.657l-5.732-5.732z\\" class=\\"wd-icon-fill\\"/></g></svg>",
          }
        }
      />
    </button>
  </div>
</div>
`;

exports[`SidePanel Snapshots renders as expected 1`] = `
.emotion-0 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-0 .ezxdcmp1 {
  right: px;
  left: px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-0 emotion-1"
  open={true}
/>
`;

exports[`SidePanel Snapshots renders side panel on the left 1`] = `
.emotion-2 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-2 .ezxdcmp1 {
  right: px;
  left: px;
}

.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-2 emotion-3"
  open={true}
>
  <h2
    className="emotion-0 emotion-1"
  >
    Side Panel Header
  </h2>
</div>
`;

exports[`SidePanel Snapshots renders side panel on the right with correct toggle button when panel is closed 1`] = `
.emotion-3 {
  position: absolute;
  bottom: 16px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 32px;
  height: 32px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #dfe2e6;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ced3d9;
}

.emotion-1:hover {
  background-color: #dfe2e6;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1 span svg {
  width: 20px;
  height: 20px;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-5 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.16);
  background-color: #ffffff;
  width: 40px;
  padding: 0px;
  right: 0px;
  left: px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 .emotion-4 {
  right: px;
  left: px;
}

<div
  aria-expanded={false}
  aria-orientation="vertical"
  className="emotion-5 emotion-6"
  open={false}
>
  <div
    className="emotion-3 emotion-4"
  >
    <button
      className="emotion-1 emotion-2"
      onClick={[Function]}
    >
      <span
        className="emotion-0"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-arrow-left wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M13.436 5.263a.506.506 0 0 0-.003-.71l-.7-.701a.495.495 0 0 0-.71-.003l-7.779 7.777a.498.498 0 0 0-.144.352.48.48 0 0 0 .144.356l7.778 7.778a.506.506 0 0 0 .71-.003l.701-.7a.495.495 0 0 0 .003-.711l-5.702-5.703H19.36c.273 0 .5-.226.5-.505v-.99a.495.495 0 0 0-.5-.505H7.704l5.732-5.732z\\" class=\\"wd-icon-fill\\"/></g></svg>",
          }
        }
      />
    </button>
  </div>
</div>
`;

exports[`SidePanel Snapshots renders side panel on the right with correct toggle button when panel is open 1`] = `
.emotion-0 {
  font-size: 24px;
  line-height: 32px;
  font-weight: 700;
  color: #333333;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-top: 0px;
}

.emotion-5 {
  position: absolute;
  bottom: 16px;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  background-color: #f0f1f2;
  width: 32px;
  height: 32px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-3 span .wd-icon-fill,
.emotion-3 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-3:focus span .wd-icon-fill,
.emotion-3:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-3:hover:focus {
  background-color: #dfe2e6;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ced3d9;
}

.emotion-3:hover {
  background-color: #dfe2e6;
}

.emotion-3:hover span .wd-icon-fill,
.emotion-3:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-3:disabled span .wd-icon-fill,
.emotion-3:active:disabled span .wd-icon-fill,
.emotion-3:focus:disabled span .wd-icon-fill,
.emotion-3:hover:disabled span .wd-icon-fill,
.emotion-3:disabled span .wd-icon-accent,
.emotion-3:active:disabled span .wd-icon-accent,
.emotion-3:focus:disabled span .wd-icon-accent,
.emotion-3:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-3 span svg {
  width: 20px;
  height: 20px;
}

.emotion-2 {
  display: inline-block;
}

.emotion-2 svg {
  display: block;
}

.emotion-2 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-2 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-2:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-2 .wd-icon-background {
  fill: transparent;
}

.emotion-2:hover .wd-icon-background {
  fill: transparent;
}

.emotion-7 {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: width 150ms ease-out 0s;
  transition: width 150ms ease-out 0s;
  position: absolute;
  box-shadow: px;
  background-color: #f6f7f8;
  width: 300px;
  padding: 24px;
  right: 0px;
  left: px;
  -webkit-align-items: px;
  -webkit-box-align: px;
  -ms-flex-align: px;
  align-items: px;
}

.emotion-7 .emotion-6 {
  right: px;
  left: 16px;
}

<div
  aria-expanded={true}
  aria-orientation="vertical"
  className="emotion-7 emotion-8"
  open={true}
>
  <h2
    className="emotion-0 emotion-1"
  >
    Side Panel Header
  </h2>
  <div
    className="emotion-5 emotion-6"
  >
    <button
      className="emotion-3 emotion-4"
      onClick={[Function]}
    >
      <span
        className="emotion-2"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-arrow-right wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M10.525 5.263a.506.506 0 0 1 .003-.71l.7-.701a.495.495 0 0 1 .711-.003l7.778 7.777a.498.498 0 0 1 .144.352.48.48 0 0 1-.144.356l-7.778 7.778a.506.506 0 0 1-.71-.003l-.701-.7a.495.495 0 0 1-.003-.711l5.702-5.703H4.6a.505.505 0 0 1-.5-.505v-.99c0-.29.224-.505.5-.505h11.657l-5.732-5.732z\\" class=\\"wd-icon-fill\\"/></g></svg>",
          }
        }
      />
    </button>
  </div>
</div>
`;
